--- a/src/services/Project/project-service-chart/Chart.yaml
+++ b/src/services/Project/project-service-chart/Chart.yaml
@@ -1,4 +1,4 @@
 apiVersion: v1
-description: A Helm chart for Kubernetes
+description: Project Service Chart
 name: project-service-chart
 version: 0.1.0
