--- a/src/services/Project/project-service-chart/templates/service.yaml
+++ b/src/services/Project/project-service-chart/templates/service.yaml
@@ -1,15 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "fullname" . }}
+  name: projects
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
+    app: projects
 spec:
-  type: {{ .Values.service.type }}
   ports:
-  - port: {{ .Values.service.externalPort }}
-    targetPort: {{ .Values.service.internalPort }}
-    protocol: TCP
-    name: {{ .Values.service.name }}
+  - name: http
+    port: {{ .Values.service.internalPort }}
   selector:
-    app: {{ template "fullname" . }}
+    app: projects
