Modify bidders chart

--- a/src/services/Bidder/Deployment/Chart/bidder-service-chart/templates/deployment.yaml
+++ b/src/services/Bidder/Deployment/Chart/bidder-service-chart/templates/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: {{ template "fullname" . }}
+  name: bidders
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
 spec:
@@ -9,11 +9,11 @@ spec:
   template:
     metadata:
       labels:
-        app: {{ template "fullname" . }}
+        app: bidders
     spec:
       containers:
-      - name: {{ .Chart.Name }}
-        image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+      - name: bidders
+        image: "{{ .Values.image.repository }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         ports:
         - containerPort: {{ .Values.service.internalPort }}
