--- a/src/services/Bidder/Deployment/Chart/bidder-service-chart/templates/service.yaml
+++ b/src/services/Bidder/Deployment/Chart/bidder-service-chart/templates/service.yaml
@@ -1,15 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "fullname" . }}
+  name: bidders
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
+    app: bidders
 spec:
-  type: {{ .Values.service.type }}
+
   ports:
-  - port: {{ .Values.service.externalPort }}
-    targetPort: {{ .Values.service.internalPort }}
-    protocol: TCP
-    name: {{ .Values.service.name }}
+  - name: http
+    port: {{ .Values.service.internalPort }}
   selector:
-    app: {{ template "fullname" . }}
+    app: bidders
