--- a/src/services/Bidder/Deployment/Chart/bidder-service-chart/values.yaml
+++ b/src/services/Bidder/Deployment/Chart/bidder-service-chart/values.yaml
@@ -1,33 +1,13 @@
-# Default values for bidder-service-chart.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
 replicaCount: 1
 image:
-  repository: nginx
+  repository: cmdgroup/bidders-service
   tag: stable
   pullPolicy: IfNotPresent
 service:
-  name: nginx
-  type: ClusterIP
-  externalPort: 80
-  internalPort: 80
-ingress:
-  enabled: false
-  # Used to create Ingress record (should used with service.type: ClusterIP).
-  hosts:
-    - chart-example.local
-  annotations:
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  tls:
-    # Secrets must be manually created in the namespace.
-    # - secretName: chart-example-tls
-    #   hosts:
-    #     - chart-example.local
+  name: bidders
+  externalPort: 9000
+  internalPort: 9000
 resources:
-  limits:
-    cpu: 100m
-    memory: 128Mi
   requests:
     cpu: 100m
     memory: 128Mi
